# reduct-cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  README.md  SECURITY.md  SUMMARY.md  conanfile.py  conanfile.txt  install.Dockerfile  mkdocs.yml  quick-start.md  vcpkg-configuration.json  vcpkg.json
.github/actions/: check-package.yml
.github/actions/build-package/: action.yml
.github/actions/build-package-cmake/: action.yml
.github/actions/build-package-conan/: action.yml
.github/actions/build-package-system/: action.yml
.github/actions/build-package-vcpkg/: action.yml
.github/actions/check-package/: action.yml
.github/actions/install-conan/: action.yml
.github/actions/install-vcpkg/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci.yml
cmake/: InstallDependencies.cmake  ReductCppConfig.cmake.in  ReductCppConfigVersion.cmake.in  reductcpp-config.cmake.in
docs/: README.md  SUMMARY.md  index.md  quick-start.md  requirements.txt
docs/api_reference/: ibucket.md  iclient.md  index.md
docs/overrides/: main.html
docs/reference/: api-reference.md
docs/reference/api-reference/: README.md  ibucket.md  iclient.md
examples/: CMakeLists.txt  README.md  conan_test.cc  conanfile.py  subscription.cc  usage_example.cc
reference/: api-reference.md
src/: CMakeLists.txt
src/reduct/: bucket.cc  bucket.h  client.cc  client.h  diagnostics.h  error.cc  error.h  http_options.h  result.h
src/reduct/internal/: batch_v1.cc  batch_v1.h  batch_v2.cc  batch_v2.h  headers.h  http_client.cc  http_client.h  serialisation.cc  serialisation.h  sha256.h  time_parse.h
tests/: CMakeLists.txt  fixture.h  helpers.h  test.cc
tests/reduct/: bucket_api_test.cc  client_server_api_test.cc  client_test.cc  entry_api_test.cc  lifecycle_api_test.cc  replication_api_test.cc  server_api_test.cc  token_api_test.cc
